# files-handler-microservice

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
src/: config.py  db_conn.py  main.py
src/api/: file_routes.py
src/models/: __init__.py  exceptions.py  file.py
src/repositories/: __init__.py  file_repository.py
src/services/: __init__.py  download_file.py  proceed_file.py  upload_file.py
src/services/s3/: __init__.py  storage_interface.py  storage_protocol.py  yandex_s3.py
src/tasks/: __init__.py  celery_app.py  upload_to_cloud.py
tests/: test_main.py
uploads/: cleanup.sh
